--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="pbru">ระบบสืบค้นและระบุตำแหน่ง</string>
     <string name="username">ชื่อผู้ใช้</string>
     <string name="Password">รหัสผ่าน</string>
+    <string name="user_id">รหัสผู้ใช้</string>
+    <string name="user_name">ชื่อ-นามสกุล</string>
+    <string name="email">อีเมล</string>
+    <string name="phone">เบอร์โทร</string>
 </resources>
