--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
     <string name="User">User :</string>
     <string name="title_haveSpace">มีช่องว่าง</string>
     <string name="message_haveSpace">กรุณากรอกทุกช่อง</string>
+    <string name="title_userFalse">User ผิด</string>
+    <string name="message_userFalse">ไม่มีข้อมูล</string>
+    <string name="title_passwordFalse">password ผิด</string>
+    <string name="message_passwordFalse">กรอกพาสเวิดใหม่</string>
+
 
 
 
