--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="title_passwordFalse">password ผิด</string>
     <string name="message_passwordFalse">กรอกพาสเวิดใหม่</string>
     <string name="title_activity_service">Map</string>
+    <string name="title_activity_add_edit">Map</string>
 
 
 </resources>
